refactor: modernize navigation and header systems with enhanced UX animations
feat: overhaul core UI components and persistence logic

- Refactor top and bottom navigation bars with crystal glow effects.
- Implement vertical scroll-linked progress bars on both sides.
- Add real-time localStorage persistence for student form fields.
- Enhance back button with directional pulse animation.
- Update footer credit and styling.

--- a/index.html
+++ b/index.html
@@ -40,113 +40,72 @@
 </head>
 <body>
     <!-- Header Section -->
-    <header>
-        <img src="../img/header-diu.png" alt="DIU Cover Page Logo">
-        <button onclick="window.location.href='/'">
-            <i class="fas fa-home"></i> Home
-        </button>
-    </header>
+  <header>
+    <nav class="top-nav-bar">
+      <div class="logo">
+        <a href="index.html">
+          <img src="img/header-diu.png" alt="DIU Cover Page Logo">
+        </a>
+      </div>
+    </nav>
+  </header>
     <!-- Main Section -->
+  <main>
+    <div id="progress-bar-right"></div>
+    <div id="progress-bar-left"></div>    
     <section class="main">
-        <div class="main-container">
+        <div class="main-container card">
             <h1>Welcome to DIU Cover Page</h1>
-            <!-- Introduction Section -->
+            <!-- Introduction Section --> 
             <div class="introduction">
+                <h5 style="text-align: end;;">Create Your DIU Cover Page in Minutes</h5><br><hr><br>
                 <p>
-                    Hello <strong>Daffodilian's!</strong> 🎉 Welcome to <strong>DIU Cover Page</strong> — your one-stop tool for creating professional DIU cover pages!✍️ No need to disturb your cover page maker friend 😉 — just use this site and get your assignment, lab report, final report, or index cover page done in minutes! 🚀
+                    Welcome to <strong>DIU Cover Page</strong> — a simple, fast, and reliable way to create
+                    professional cover pages for your <strong>assignments, lab reports, final reports, and indexes</strong>.
+                    No design skills, no templates to edit — just fill in the form and download.
                 </p>
 
                 <p>
-                    ⚡ Our easy-to-use forms let you generate, download, and print your cover pages instantly! Whether you're in a rush for a BLC submission ⏳ or just want a neat, standardized look, we've got you covered ✅.
+                    Our streamlined form helps you generate a <strong>DIU-standard cover page</strong> that you can
+                    instantly <strong>download, print, or submit to BLC</strong>, even when you are in a hurry.
                 </p>
-
+                <p style="text-align: center; border: 1px solid black;">You can download as <strong>PDF or Image</strong> formats.</p>
                 <p>
-                    ⏱️ Save time, avoid mistakes, and impress your teachers with perfectly formatted cover pages. <br>
-                    It's 💯 free, fast, and always available—so focus on your studies and let us handle the paperwork! 📝
+                    Save time, avoid formatting mistakes, and present your work with confidence.
+                    <strong>It’s completely free, always available, and built specifically for Daffodil International University students.</strong>
                 </p>
-
-            </div>
-            <!-- Desired Cover Page Selection Section -->
-            <p> <strong>Select a form to fill and generate:</strong></p>
-            <div class="form-links">
-                <a href="src/assignment_form.html"><i class="fas fa-file-alt"></i> Assignment Form</a>
-                <a href="src/lab_report_form.html"><i class="fas fa-flask"></i> Lab Report Form</a>
-                <a href="src/final_lab_report_form.html"><i class="fas fa-file-contract"></i> Final Lab Report Form</a>
-                <a href="src/lab_report_index_form.html"><i class="fas fa-tasks"></i> Lab Report Index Form</a>
-            </div>
-            <div style="margin-top:40px;">
-                <a href="/src/output.html" style="color:#2a3a5e;text-decoration:underline;">View Last Submission Result</a>
-            </div>
-            <!-- Instruction to Creating Cover Page Section -->
-            <div class="instructions">
-                <h2>📘 How to Create Your DIU Cover Page</h2>
-                <ol>
-                    <li>
-                        <strong>Choose Your Cover Page Type:</strong>
-                        <br>
-                        Select the appropriate form for your needs from the options above (📄 Assignment, 📑 Lab Report, 📝 Final Lab Report, or 📂 Lab Report Index).
-                    </li>
-                    <li>
-                        <strong>Fill Out the Form:</strong>
-                        <br>
-                        ✍️ Enter all required information such as your name, ID, course details, teacher’s name, and any other relevant fields. Double-check for accuracy!
-                    </li>
-                    <li>
-                        <strong>Generate Your Cover Page:</strong>
-                        <br>
-                        ⚡ After filling the form, click the “Generate” button. Your cover page will be created instantly.
-                    </li>
-                    <li>
-                        <strong>Download or Print:</strong>
-                        <br>
-                        ⬇️ You can download your cover page as a PDF document or an Image for submission.
-                    </li>
-                    <li>
-                        <strong>View Last Submission:</strong>
-                        <br>
-                        👀 If you need to review your last submission, use the “View Last Submission Result” link above.
-                    </li>
-                    <li>
-                        <strong>Need Help?</strong> 
-                        <br>
-                        💡 For any issues or feedback, use the contact links in the bottom to reach out.
-                    </li>
-                </ol>
-                <h2>Results After Generation</h2>
-                <p><em>Note:</em> This page is formatted as <strong>A4 size (210mm x 297mm)</strong>. It will only fit within your document if the document <strong>layout</strong> is set to <strong>A4.</strong></p>
-                <p style="text-decoration: underline;">This is how your cover page will look like(example):</p>
-                <img src="/img/example-cover-page.png" alt="Example Cover Page after Generation">
                 <p>
-                    <em>Tip:</em> ✅ Make sure to use the latest information and follow your instructor’s guidelines for cover page formatting. This tool is designed to save you time and ensure your cover page looks professional!
+                    To get started, simply click on the <strong>+ Create</strong> button below and make your cover page now.
                 </p>
+                <p>To learn how to create a cover page, click the <strong>Guidelines</strong> button below.</p>
+                <p>To learn more about this website, click the <strong>About</strong> button below.</p>
             </div>
-        </div>
-    </section>
-    <!-- Footer Section -->
-    <footer>
-        <div class="footer-container">
-            <div class="footer-feedback">
-                <p>For any feedback or suggestion, click the links bellow:</p>
-                <ul class="footer-social-links">
-                    <li><a href="https://t.me/zero2fahim" target="_blank" title="Telegram"><i class="fab fa-telegram"></i></a></li>
-                    <li><a href="https://www.facebook.com/zero2fahim" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a></li>
-                    <li><a href="https://www.instagram.com/zero2fahim" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="https://github.com/tasnim-farhan-fahim" target="_blank" title="GitHub"><i class="fab fa-github"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/tasnim-farhan-fahim" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a></li>
-                    </li>
-                </ul>
-            </div>
-            <div class="footer-info">
-                <p>Created by <span>Tasnim Farhan Fahim</span></p>
-                <p class="footer-email"><a href="mailto:fahim22205101291@diu.edu.bd"><i class="fas fa-envelope"></i> Fahim22205101291@diu.edu.bd</a></p>
-                <div class="footer-links">
-                    <a href="/src/terms.html">Terms and Conditions</a> | 
-                    <a href="/src/policy.html">Privacy and Policy</a>
+            <div>
+                <p style="border: 1px solid black; text-align: center;text-align: center;">See our <strong>Terms and Conditions</strong> and <strong>Privacy Policy</strong> below for more information.</p>
+                <div class="terms-policy">
+                    <a href="src/terms.html">Terms and Conditions</a>
+                    <a href="src/policy.html">Privacy Policy</a>
                 </div>
-                <p> All rights reserved &copy;DIU Cover Page 2025</p>
             </div>
         </div>
-    </footer>
+        <!-- <div class="survy-form card">
+            <h2>Help Us Improve DIU Cover Page!</h2><hr>
+            <p>Your feedback matters to us. Please take a moment to fill out this short survey and let us know how we can make DIU Cover Page even better for you.</p>
+            <a class="button" href="https://forms.gle/YourSurveyLink" target="_blank">Take the Survey <i class="fa fa-arrow-right"></i></a>
+        </div> -->
+    </section>
+  </main>
+    <!-- Footer Section -->
+  <footer>
+    <nav class="bottom-nav-bar">
+      <ul class="nav-links">
+        <li><a class="nav-link" href="index.html"><i class="fa fa-home"></i><span>Home</span></a></li>
+        <li><a class="nav-link" href="src/create.html"><i class="fa fa-plus"></i><span>Create</span></a></li>
+        <li><a class="nav-link" href="src/guidelines.html"><i class="fa fa-file"></i><span>Guidelines</span></a></li>
+        <li><a class="nav-link" href="src/about.html"><i class="fa fa-info-circle"></i><span>About</span></a></li>
+      </ul>
+    </nav>
+  </footer>
 
     <!-- JS Libraries -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js" defer></script>
