--- a/src/about.html
+++ b/src/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>DIU Cover Page</title>
+    <title>About - DIU Cover Page</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Tasnim Farhan Fahim">
@@ -10,7 +10,7 @@
     <meta name="robots" content="index, follow">
 
     <!-- Canonical -->
-    <link rel="canonical" href="https://diucoverpage.com/">
+    <link rel="canonical" href="https://diucoverpage.com/about.html">
 
     <!-- Structured Data (JSON-LD) -->
     <script type="application/ld+json">
@@ -54,7 +54,37 @@
     <div id="progress-bar-right"></div>
     <div id="progress-bar-left"></div>
     <section>
-      
+      <div class="about-page card">
+        <h1>About DIU Cover Page</h1><hr>
+        <p>
+          This tool helps DIU students quickly generate clean, print-ready cover pages
+          for assignments, lab reports, and lab indexes. Just fill in your course details, teacher details, and
+          your academic information and click generate, then download or print the formatted cover page instantly.
+        </p>
+        <p>Download your cover page in both <strong>Image and PDF</strong>  format for easy printing and sharing.</p>
+      </div>
+      <div class="about-author">
+        <h2>Developer Information</h2><hr><br>
+        <p>This site is built by</p>
+        <h3 style="text-align: center; padding: 4px;">Tasnim Farhan Fahim</h3>
+        <p style="text-indent: 70%; text-align: justify;">a CSE undergraduate student at Daffodil International University. I created this tool to help my fellow DIU students save time and effort when preparing their assignment cover pages.</p> <br>
+        <p style="text-align: center;">For any <strong>feedback</strong>, please contact me through the following platforms:</p><hr><br><br>
+          <ul class="author-social-links">
+              <li><a href="https://t.me/zero2fahim" target="_blank" title="Telegram"><i class="fab fa-telegram"></i>Telegram</a></li>
+              <li><a href="https://www.facebook.com/zero2fahim" target="_blank" title="Facebook"><i class="fab fa-facebook"></i>Facebook</a></li>
+              <li><a href="https://www.instagram.com/zero2fahim" target="_blank" title="Instagram"><i class="fab fa-instagram"></i>Instagram</a></li>
+              <li><a href="https://github.com/tasnim-farhan-fahim" target="_blank" title="GitHub"><i class="fab fa-github"></i>GitHub</a></li>
+              <li><a href="https://www.linkedin.com/in/tasnim-farhan-fahim" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i>LinkedIn</a></li>
+          </ul><br>
+          <div class="author-email">
+            <p><a href="mailto:fahim22205101291@diu.edu.bd"><i class="fas fa-envelope"></i> Fahim22205101291@diu.edu.bd</a></p> <br><br>
+            <blockquote>
+              <p><em>"Don’t just say <strong>‘Not Interested’</strong> before hearing the full story."</em></p>
+            </blockquote>
+            <br>
+            <p> All rights reserved <em>&copy;DIU Cover Page 2025</em></p>
+          </div>
+      </div>
     </section>
   </main>
   <!-- author Content Section -->
