--- a/src/policy.html
+++ b/src/policy.html
@@ -40,97 +40,147 @@
 </head>
 <body>
     <!-- Header Section -->
-    <header>
-        <img src="../img/header-diu.png" alt="DIU Cover Page Logo">
-        <button onclick="window.history.back()">
-            <i class="fas fa-angle-left"></i> Back
-        </button>
-    </header>
+      <header>
+        <nav class="top-nav-bar">
+          <div class="logo">
+            <a href="../index.html">
+              <img src="../img/header-diu.png" alt="DIU Cover Page Logo">
+            </a>
+          </div>
+        </nav>
+        <button class="back-button" onclick="window.history.back()"> <i class="fa fa-arrow-circle-left"></i></button>
+      </header>
     <!-- Main Section -->
-    <section class="main">
-      <div class="policy-container">
-        <h1>Privacy Policy for <a href="https://diucoverpage.com">DIU Cover Page</a></h1>
-        <p>Welcome to <strong><a href="https://diucoverpage.com"> DIU Cover Page(diucoverpage.com)</a></strong>, student-created academic cover page creation tool for students of Daffodil International University (DIU). Your privacy and security are our top priorities. This Privacy Policy explains in detail how we handle your information, our commitment to data protection, and our advertising practices.</p>
-        <h2>1. Purpose of the Site</h2>
-        <p>This website is designed exclusively for DIU students to create academic cover pages for assignments, lab reports, and submissions. The site is operated by a sole owner and is not affiliated with any commercial entity.</p>
-        <h2>2. Information Collection and Use</h2>
-        <ul>
-          <li><strong>No Personal Data Collection:</strong> <a href="https://diucoverpage.com">DIU Cover Page</a> does <u>not</u> collect, store, or process any personal information from users. All form data entered is used only for generating cover pages and is not transmitted, saved, or shared with any third party.</li>
+    <main>
+      <div id="progress-bar-right"></div>
+      <div id="progress-bar-left"></div>
+      <section>
+        <div class="policy-container">
+          <h1>Privacy Policy for <a href="https://diucoverpage.com">DIU Cover Page</a></h1><hr><br>
+          <p>
+        Welcome to <strong><a href="https://diucoverpage.com">DIU Cover Page (diucoverpage.com)</a></strong>, a student‑built academic cover page generator for learners of Daffodil International University (DIU). Your privacy and the security of your data are important to us. This Privacy Policy explains how we handle your information, our approach to data protection, and how advertising is served on this site.
+          </p>
+
+          <h2>1. Purpose of the Site</h2>
+          <p>
+        This website is intended solely to help DIU students create academic cover pages for assignments, lab reports, and other submissions. It is operated by an individual owner and is not part of, sponsored by, or affiliated with any commercial organization.
+          </p>
+
+          <h2>2. Information Collection and Use</h2>
+          <ul>
+        <li>
+          <strong>No personal data collection:</strong>
+          <a href="https://diucoverpage.com">DIU Cover Page</a> does <u>not</u> intentionally collect, store, or process personal data. The information you enter into forms is used only to generate your cover page and is not transmitted to our servers or shared with any third party.
+        </li>
+        <li>
+          <strong>Academic use only:</strong>
+          All information you provide is used solely for creating academic cover pages and remains within your browser. We do not require registration, login, or any form of personal identification.
+        </li>
+          </ul>
+
+          <h2>3. Data Security</h2>
+          <ul>
+        <li>
+          Because we do not collect or store user data on our servers, the risk of a data breach or unauthorized access from our side is minimized.
+        </li>
+        <li>
+          Cover page generation is performed locally in your browser. We do not transmit your input data to any backend system.
+        </li>
+          </ul>
+
+          <h2>4. Cookies and Tracking</h2>
+          <ul>
+        <li>
+          DIU Cover Page does <u>not</u> use cookies, analytics tools, or similar technologies to track or profile individual users for its own purposes.
+        </li>
+        <li>
+          Your use of the cover page generator is private within your browser. Any cookies or tracking technologies used by third‑party services (such as advertising providers) are governed by their respective privacy policies.
+        </li>
+          </ul>
+
+          <h2>5. Advertising Policy</h2>
+          <ul>
+        <li>
+          This site may display advertisements provided by Google or other reputable advertising networks.
+        </li>
+        <li>
+          We do <u>not</u> knowingly permit ads that contain sensitive, inappropriate, or offensive content. If you see an ad you believe is unsuitable, please notify the site administrator.
+        </li>
+        <li>
+          Advertising revenue helps support the ongoing maintenance and improvement of this free academic tool.
+        </li>
+        <li>
+          We do not share user-entered data with advertisers. Any ad targeting is managed directly by the ad provider (for example, Google) and does not use data collected from this tool.
+        </li>
+          </ul>
+
+          <h2>6. Third‑Party Links</h2>
+          <ul>
+        <li>
+          Our site may contain links to external websites for additional resources or reference. We are not responsible for the content, security, or privacy practices of these third‑party sites and encourage you to review their privacy policies separately.
+        </li>
+          </ul>
+
+          <h2>7. Children’s Privacy</h2>
+          <ul>
+        <li>
+          DIU Cover Page is designed for university‑level students and is not intended for children under 13. We do not knowingly collect information from children under 13.
+        </li>
+          </ul>
+
+          <h2>8. User Rights and Control</h2>
+          <ul>
+        <li>
+          You retain full control over any information you type into the site. We do not store it beyond your current browser session.
+        </li>
+        <li>
+          If you have questions or concerns about how your information is handled, you are encouraged to contact the site administrator.
+        </li>
+          </ul>
+
+          <h2>9. Changes to This Policy</h2>
+          <ul>
+        <li>
+          We may revise this Privacy Policy from time to time. Any updates will be posted on this page and will take effect from the date indicated below.
+        </li>
+          </ul>
+
+          <h2>10. Contact Information</h2>
+          <ul>
+        <li>
+          For questions, concerns, or to report an issue (including inappropriate advertisements), please contact the sole owner and administrator using the links provided on this website.
+        </li>
+          </ul>
+
+          <h2>11. Additional Information</h2>
+          <ul>
+        <li>
+          DIU Cover Page aims to provide a safe, focused, and academic‑oriented environment for DIU students, with minimal and relevant advertising where necessary.
+        </li>
+        <li>
+          We do not sell, rent, or otherwise disclose user‑provided information to third parties.
+        </li>
+        <li>
+          By using this site, you acknowledge that you have read and agree to this Privacy Policy and our Terms and Conditions.
+        </li>
+          </ul>
+          <hr>
           <br>
-          <li><strong>Academic Use Only:</strong> All information entered is for academic purposes and remains on your device. We do not require registration, login, or any form of identification.</li>
-        </ul>
-        <h2>3. Data Security</h2>
-        <ul>
-          <li>Since no user data is collected or stored, there is no risk of data breach or unauthorized access from our side.</li>
-          <li>All cover page generation is performed locally in your browser. We do not transmit your data to any server.</li>
-        </ul>
-        <h2>4. Cookies and Tracking</h2>
-        <ul>
-          <li>DIU Cover Page does <u>not</u> use cookies, web beacons, or any tracking technologies to monitor user activity.</li>
-          <li>Your browsing experience is private and anonymous.</li>
-        </ul>
-        <h2>5. Advertising Policy</h2>
-        <ul>
-          <li>This site may display advertisements provided by Google or other reputable ad networks.</li>
-          <li>We do <u>not</u> allow ads containing sensitive, inappropriate, or offensive content. If you encounter any such ads, please contact the site administrator immediately.</li>
-          <li>Ads help support the maintenance and development of this free academic tool.</li>
-          <li>No user data is shared with advertisers. Ad targeting is handled by Google and does not involve any data from this site.</li>
-        </ul>
-        <h2>6. Third-Party Links</h2>
-        <ul>
-          <li>Our site may contain links to third-party websites for reference or resources. We are not responsible for the privacy practices or content of these external sites.</li>
-        </ul>
-        <h2>7. Children's Privacy</h2>
-        <ul>
-          <li>DIU Cover Page is intended for university students and does not knowingly collect information from children under 13.</li>
-        </ul>
-        <h2>8. User Rights and Control</h2>
-        <ul>
-          <li>You have full control over the information you enter. Nothing is stored or processed beyond your browser session.</li>
-          <li>If you have concerns about privacy or data usage, please contact the site administrator.</li>
-        </ul>
-        <h2>9. Changes to This Policy</h2>
-        <ul>
-          <li>We may update this Privacy Policy periodically. Any changes will be posted on this page with the effective date.</li>
-        </ul>
-        <h2>10. Contact Information</h2>
-        <ul>
-          <li>If you have questions, concerns, or wish to report inappropriate ads, please contact the sole owner and administrator at links below.</li>
-        </ul>
-        <h2>11. Additional Information</h2>
-        <ul>
-          <li>DIU Cover Page is committed to providing a safe, ad-free (except for Google ads), and academic-focused environment for DIU students.</li>
-          <li>We do not sell, rent, or disclose any information to third parties.</li>
-          <li>By using this site, you agree to this Privacy Policy and our Terms and Conditions.</li>
-        </ul>
-        <p><em>Last updated: September 1, 2025</em></p>
-      </div>
-    </section>
-    <!-- Footer Section -->
-    <footer>
-        <div class="footer-container">
-            <div class="footer-feedback">
-                <p>For any feedback or suggestion, click the links bellow:</p>
-                <ul class="footer-social-links">
-                    <li><a href="https://t.me/zero2fahim" target="_blank" title="Telegram"><i class="fab fa-telegram"></i></a></li>
-                    <li><a href="https://www.facebook.com/zero2fahim" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a></li>
-                    <li><a href="https://www.instagram.com/zero2fahim" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="https://github.com/tasnim-farhan-fahim" target="_blank" title="GitHub"><i class="fab fa-github"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/tasnim-farhan-fahim" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a></li>
-                    </li>
-                </ul>
-            </div>
-            <div class="footer-info">
-                <p>Created by <span>Tasnim Farhan Fahim</span></p>
-                <p class="footer-email"><a href="mailto:fahim22205101291@diu.edu.bd"><i class="fas fa-envelope"></i> Fahim22205101291@diu.edu.bd</a></p>
-                <div class="footer-links">
-                    <a href="../src/terms.html">Terms and Conditions</a> | 
-                    <a href="../src/policy.html">Privacy and Policy</a>
-                </div>
-                <p> All rights reserved &copy;DIU Cover Page 2025</p>
-            </div>
+          <p><em>Last updated: September 1, 2025</em></p>
         </div>
-    </footer>
+      </section>
+    </main>
+    <!-- Footer Section -->
+  <footer>
+    <nav class="bottom-nav-bar">
+      <ul class="nav-links">
+        <li><a class="nav-link" href="../index.html"><i class="fa fa-home"></i><span>Home</span></a></li>
+        <li><a class="nav-link" href="create.html"><i class="fa fa-plus"></i><span>Create</span></a></li>
+        <li><a class="nav-link" href="guidelines.html"><i class="fa fa-file"></i><span>Guidelines</span></a></li>
+        <li><a class="nav-link" href="about.html"><i class="fa fa-info-circle"></i><span>About</span></a></li>
+      </ul>
+    </nav>
+  </footer>
 
     <!-- JS Libraries -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js" defer></script>
