--- a/src/lab_report_index_form.html
+++ b/src/lab_report_index_form.html
@@ -41,116 +41,110 @@
 <body>
   <!-- Header Section -->
     <header>
-        <img src="../img/header-diu.png" alt="DIU Cover Page Logo">
-        <button onclick="window.location.href='../'">
-            <i class="fas fa-angle-left"></i> Back
-        </button>
+        <nav class="top-nav-bar">
+        <div class="logo">
+            <a href="../index.html">
+            <img src="../img/header-diu.png" alt="DIU Cover Page Logo">
+            </a>
+        </div>
+        </nav>
+        <button class="back-button" onclick="window.history.back()"> <i class="fa fa-arrow-circle-left"></i></button>
     </header>
   <!-- Main Section -->
-  <section class="main">
-    <form id="labReportIndexForm">
-      <h2><i class="fas fa-tasks"></i> Lab Report Index Submission</h2>
-      <fieldset>
-        <legend>Lab Report Details 1</legend>
-        <label>Experiment No: <input type="text" id="experimentNo1" name="experimentNo1" value="1" placeholder="Enter Experiment No"></label>
-        <label>Experiment Name: <input type="text" id="experimentName1" name="experimentName1" placeholder="Enter Experiment Name"></label>
-        <label>Submission Date: <input type="date" id="submissionDate1" name="submissionDate1"></label>
-        <label>Page: <input type="text" id="page1" name="page1" placeholder="Enter Page No(eg. 1-5)"></label>
-      </fieldset>
-      <fieldset>
-        <legend>Lab Report Details 2</legend>
-        <label>Experiment No: <input type="text" id="experimentNo2" name="experimentNo2" value="2" placeholder="Enter Experiment No"></label>
-        <label>Experiment Name: <input type="text" id="experimentName2" name="experimentName2" placeholder="Enter Experiment Name"></label>
-        <label>Submission Date: <input type="date" id="submissionDate2" name="submissionDate2"></label>
-        <label>Page: <input type="text" id="page2" name="page2" placeholder="Enter Page No(eg. 1-5)"></label>
-      </fieldset>
-      <fieldset>
-        <legend>Lab Report Details 3</legend>
-        <label>Experiment No: <input type="text" id="experimentNo3" name="experimentNo3" value="3" placeholder="Enter Experiment No"></label>
-        <label>Experiment Name: <input type="text" id="experimentName3" name="experimentName3" placeholder="Enter Experiment Name"></label>
-        <label>Submission Date: <input type="date" id="submissionDate3" name="submissionDate3"></label>
-        <label>Page: <input type="text" id="page3" name="page3" placeholder="Enter Page No(eg. 1-5)"></label>
-      </fieldset>
-      <fieldset>
-        <legend>Lab Report Details 4</legend>
-        <label>Experiment No: <input type="text" id="experimentNo4" name="experimentNo4" value="4" placeholder="Enter Experiment No"></label>
-        <label>Experiment Name: <input type="text" id="experimentName4" name="experimentName4" placeholder="Enter Experiment Name"></label>
-        <label>Submission Date: <input type="date" id="submissionDate4" name="submissionDate4"></label>
-        <label>Page: <input type="text" id="page4" name="page4" placeholder="Enter Page No(eg. 1-5)"></label>
-      </fieldset>
-      <fieldset>
-        <legend>Lab Report Details 5</legend>
-        <label>Experiment No: <input type="text" id="experimentNo5" name="experimentNo5" value="5" placeholder="Enter Experiment No"></label>
-        <label>Experiment Name: <input type="text" id="experimentName5" name="experimentName5" placeholder="Enter Experiment Name"></label>
-        <label>Submission Date: <input type="date" id="submissionDate5" name="submissionDate5"></label>
-        <label>Page: <input type="text" id="page5" name="page5" placeholder="Enter Page No(eg. 1-5)"></label>
-      </fieldset>
-      <fieldset>
-        <legend>Lab Report Details 6</legend>
-        <label>Experiment No: <input type="text" id="experimentNo6" name="experimentNo6" value="6" placeholder="Enter Experiment No"></label>
-        <label>Experiment Name: <input type="text" id="experimentName6" name="experimentName6" placeholder="Enter Experiment Name"></label>
-        <label>Submission Date: <input type="date" id="submissionDate6" name="submissionDate6"></label>
-        <label>Page: <input type="text" id="page6" name="page6" placeholder="Enter Page No(eg. 1-5)"></label>
-      </fieldset>
-      <fieldset>
-        <legend>Lab Report Details 7</legend>
-        <label>Experiment No: <input type="text" id="experimentNo7" name="experimentNo7" value="7" placeholder="Enter Experiment No"></label>
-        <label>Experiment Name: <input type="text" id="experimentName7" name="experimentName7" placeholder="Enter Experiment Name"></label>
-        <label>Submission Date: <input type="date" id="submissionDate7" name="submissionDate7"></label>
-        <label>Page: <input type="text" id="page7" name="page7" placeholder="Enter Page No(eg. 1-5)"></label>
-      </fieldset>
-      <fieldset>
-        <legend>Lab Report Details 8</legend>
-        <label>Experiment No: <input type="text" id="experimentNo8" name="experimentNo8" value="8" placeholder="Enter Experiment No"></label>
-        <label>Experiment Name: <input type="text" id="experimentName8" name="experimentName8" placeholder="Enter Experiment Name"></label>
-        <label>Submission Date: <input type="date" id="submissionDate8" name="submissionDate8"></label>
-        <label>Page: <input type="text" id="page8" name="page8" placeholder="Enter Page No(eg. 1-5)"></label>
-      </fieldset>
-      <fieldset>
-        <legend>Lab Report Details 9</legend>
-        <label>Experiment No: <input type="text" id="experimentNo9" name="experimentNo9" value="9" placeholder="Enter Experiment No"></label>
-        <label>Experiment Name: <input type="text" id="experimentName9" name="experimentName9" placeholder="Enter Experiment Name"></label>
-        <label>Submission Date: <input type="date" id="submissionDate9" name="submissionDate9"></label>
-        <label>Page: <input type="text" id="page9" name="page9" placeholder="Enter Page No(eg. 1-5)"></label>
-      </fieldset>
-      <fieldset>
-        <legend>Lab Report Details 10</legend>
-        <label>Experiment No: <input type="text" id="experimentNo10" name="experimentNo10" value="10" placeholder="Enter Experiment No"></label>
-        <label>Experiment Name: <input type="text" id="experimentName10" name="experimentName10" placeholder="Enter Experiment Name"></label>
-        <label>Submission Date: <input type="date" id="submissionDate10" name="submissionDate10"></label>
-        <label>Page: <input type="text" id="page10" name="page10" placeholder="Enter Page No(eg. 1-5)"></label>
-      </fieldset>
-      <div class="submissionButton">
-        <button type="submit">Generate Index</button>
-      </div>
-    </form>
-  </section>
+   <main>
+    <div id="progress-bar-right"></div>
+    <div id="progress-bar-left"></div>
+      <section>
+        <form id="labReportIndexForm">
+          <h2><i class="fas fa-tasks"></i> Lab Report Index Submission</h2>
+          <fieldset>
+            <legend>Lab Report Details 1</legend>
+            <label>Experiment No: <input type="text" id="experimentNo1" name="experimentNo1" value="1" placeholder="Enter Experiment No"></label>
+            <label>Experiment Name: <input type="text" id="experimentName1" name="experimentName1" placeholder="Enter Experiment Name"></label>
+            <label>Submission Date: <input type="date" id="submissionDate1" name="submissionDate1"></label>
+            <label>Page: <input type="text" id="page1" name="page1" placeholder="Enter Page No(eg. 1-5)"></label>
+          </fieldset>
+          <fieldset>
+            <legend>Lab Report Details 2</legend>
+            <label>Experiment No: <input type="text" id="experimentNo2" name="experimentNo2" value="2" placeholder="Enter Experiment No"></label>
+            <label>Experiment Name: <input type="text" id="experimentName2" name="experimentName2" placeholder="Enter Experiment Name"></label>
+            <label>Submission Date: <input type="date" id="submissionDate2" name="submissionDate2"></label>
+            <label>Page: <input type="text" id="page2" name="page2" placeholder="Enter Page No(eg. 1-5)"></label>
+          </fieldset>
+          <fieldset>
+            <legend>Lab Report Details 3</legend>
+            <label>Experiment No: <input type="text" id="experimentNo3" name="experimentNo3" value="3" placeholder="Enter Experiment No"></label>
+            <label>Experiment Name: <input type="text" id="experimentName3" name="experimentName3" placeholder="Enter Experiment Name"></label>
+            <label>Submission Date: <input type="date" id="submissionDate3" name="submissionDate3"></label>
+            <label>Page: <input type="text" id="page3" name="page3" placeholder="Enter Page No(eg. 1-5)"></label>
+          </fieldset>
+          <fieldset>
+            <legend>Lab Report Details 4</legend>
+            <label>Experiment No: <input type="text" id="experimentNo4" name="experimentNo4" value="4" placeholder="Enter Experiment No"></label>
+            <label>Experiment Name: <input type="text" id="experimentName4" name="experimentName4" placeholder="Enter Experiment Name"></label>
+            <label>Submission Date: <input type="date" id="submissionDate4" name="submissionDate4"></label>
+            <label>Page: <input type="text" id="page4" name="page4" placeholder="Enter Page No(eg. 1-5)"></label>
+          </fieldset>
+          <fieldset>
+            <legend>Lab Report Details 5</legend>
+            <label>Experiment No: <input type="text" id="experimentNo5" name="experimentNo5" value="5" placeholder="Enter Experiment No"></label>
+            <label>Experiment Name: <input type="text" id="experimentName5" name="experimentName5" placeholder="Enter Experiment Name"></label>
+            <label>Submission Date: <input type="date" id="submissionDate5" name="submissionDate5"></label>
+            <label>Page: <input type="text" id="page5" name="page5" placeholder="Enter Page No(eg. 1-5)"></label>
+          </fieldset>
+          <fieldset>
+            <legend>Lab Report Details 6</legend>
+            <label>Experiment No: <input type="text" id="experimentNo6" name="experimentNo6" value="6" placeholder="Enter Experiment No"></label>
+            <label>Experiment Name: <input type="text" id="experimentName6" name="experimentName6" placeholder="Enter Experiment Name"></label>
+            <label>Submission Date: <input type="date" id="submissionDate6" name="submissionDate6"></label>
+            <label>Page: <input type="text" id="page6" name="page6" placeholder="Enter Page No(eg. 1-5)"></label>
+          </fieldset>
+          <fieldset>
+            <legend>Lab Report Details 7</legend>
+            <label>Experiment No: <input type="text" id="experimentNo7" name="experimentNo7" value="7" placeholder="Enter Experiment No"></label>
+            <label>Experiment Name: <input type="text" id="experimentName7" name="experimentName7" placeholder="Enter Experiment Name"></label>
+            <label>Submission Date: <input type="date" id="submissionDate7" name="submissionDate7"></label>
+            <label>Page: <input type="text" id="page7" name="page7" placeholder="Enter Page No(eg. 1-5)"></label>
+          </fieldset>
+          <fieldset>
+            <legend>Lab Report Details 8</legend>
+            <label>Experiment No: <input type="text" id="experimentNo8" name="experimentNo8" value="8" placeholder="Enter Experiment No"></label>
+            <label>Experiment Name: <input type="text" id="experimentName8" name="experimentName8" placeholder="Enter Experiment Name"></label>
+            <label>Submission Date: <input type="date" id="submissionDate8" name="submissionDate8"></label>
+            <label>Page: <input type="text" id="page8" name="page8" placeholder="Enter Page No(eg. 1-5)"></label>
+          </fieldset>
+          <fieldset>
+            <legend>Lab Report Details 9</legend>
+            <label>Experiment No: <input type="text" id="experimentNo9" name="experimentNo9" value="9" placeholder="Enter Experiment No"></label>
+            <label>Experiment Name: <input type="text" id="experimentName9" name="experimentName9" placeholder="Enter Experiment Name"></label>
+            <label>Submission Date: <input type="date" id="submissionDate9" name="submissionDate9"></label>
+            <label>Page: <input type="text" id="page9" name="page9" placeholder="Enter Page No(eg. 1-5)"></label>
+          </fieldset>
+          <fieldset>
+            <legend>Lab Report Details 10</legend>
+            <label>Experiment No: <input type="text" id="experimentNo10" name="experimentNo10" value="10" placeholder="Enter Experiment No"></label>
+            <label>Experiment Name: <input type="text" id="experimentName10" name="experimentName10" placeholder="Enter Experiment Name"></label>
+            <label>Submission Date: <input type="date" id="submissionDate10" name="submissionDate10"></label>
+            <label>Page: <input type="text" id="page10" name="page10" placeholder="Enter Page No(eg. 1-5)"></label>
+          </fieldset>
+          <div class="submissionButton">
+            <button type="submit">Generate Index</button>
+          </div>
+        </form>
+      </section>
+   </main>
 
   <!-- Footer Section -->
-    <footer>
-        <div class="footer-container">
-            <div class="footer-feedback">
-                <p>For any feedback or suggestion, click the links bellow:</p>
-                <ul class="footer-social-links">
-                    <li><a href="https://t.me/zero2fahim" target="_blank" title="Telegram"><i class="fab fa-telegram"></i></a></li>
-                    <li><a href="https://www.facebook.com/zero2fahim" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a></li>
-                    <li><a href="https://www.instagram.com/zero2fahim" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="https://github.com/tasnim-farhan-fahim" target="_blank" title="GitHub"><i class="fab fa-github"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/tasnim-farhan-fahim" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a></li>
-                    </li>
-                </ul>
-            </div>
-            <div class="footer-info">
-                <p>Created by <span>Tasnim Farhan Fahim</span></p>
-                <p class="footer-email"><a href="mailto:fahim22205101291@diu.edu.bd"><i class="fas fa-envelope"></i> Fahim22205101291@diu.edu.bd</a></p>
-                <div class="footer-links">
-                    <a href="../src/terms.html">Terms and Conditions</a> | 
-                    <a href="../src/policy.html">Privacy and Policy</a>
-                </div>
-                <p> All rights reserved &copy;DIU Cover Page 2025</p>
-            </div>
-        </div>
-    </footer>
+  <footer>
+    <nav class="bottom-nav-bar">
+      <ul class="nav-links">
+        <li><a class="nav-link" href="../index.html"><i class="fa fa-home"></i><span>Home</span></a></li>
+        <li><a class="nav-link" href="create.html"><i class="fa fa-plus"></i><span>Create</span></a></li>
+        <li><a class="nav-link" href="guidelines.html"><i class="fa fa-file"></i><span>Guidelines</span></a></li>
+        <li><a class="nav-link" href="about.html"><i class="fa fa-info-circle"></i><span>About</span></a></li>
+      </ul>
+    </nav>
+  </footer>
 
   <!-- JS Libraries -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js" defer></script>
